# Genos

./: .gitignore  Cargo.toml
genos/: Cargo.toml
genos/resources/process/: main.c
genos/src/: formatter.rs  fs.rs  genos.rs  gs.rs  lib.rs  output.rs  points.rs  process.rs  score.rs  stage.rs  test.rs  test_util.rs  tid.rs  writer.rs
genos/src/stage/: compare_files.rs  import_files.rs  valgrind.rs
grader_systems/: Cargo.toml
grader_systems/resources/valgrind/: examples.yaml  examples.yml
grader_systems/src/: config.rs  context.rs  finder.rs  main.rs  stage.rs
grader_systems/src/stage/: compile.rs  run.rs  valgrind.rs
