[package]
name = "grader_systems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genos = { path = "../genos" }
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
tracing = {version = "0.1", default-features = true}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
argh = "0.1.10"
